apps/media/media-playback/dispatcharr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dispatcharr
    tier: frontend
  name: dispatcharr-prod-frontend-deployment
  namespace: media-playback
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dispatcharr
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: dispatcharr
        tier: frontend
    spec:
      containers:
        - name: web
          image: ghcr.io/dispatcharr/dispatcharr:latest
          ports:
            - containerPort: 9191
              name: http
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: dispatcharr-prod-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dispatcharr
    tier: app
  name: dispatcharr-prod-celery-deployment
  namespace: media-playback
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dispatcharr
      tier: app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: dispatcharr
        tier: app
    spec:
      containers:
        - name: celery
          image: ghcr.io/dispatcharr/dispatcharr:latest
          command: 
            - "/app/docker/entrypoint.celery.sh"
          resources: {}
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: dispatcharr-prod-pvc
