apps/media/media-playback/dispatcharr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dispatcharr-prod-svc
  namespace: media-playback
  labels:
    app: dispatcharr
spec:
  selector:
    app: dispatcharr
    tier: frontend
  ports:
    - port: 9191
      targetPort: http
      name: http
      protocol: TCP
